--- a/src/views/index.html
+++ b/src/views/index.html
@@ -16,7 +16,8 @@
         padding: 10px 15px;
         border-bottom: 1px solid #eee;
     }
-    .index-page .list-item .name{
+
+    .index-page .list-item .name {
         padding-bottom: 5px;
     }
 </style>
@@ -30,4 +31,61 @@
         </li>
     </div>
 </div>
-<script v-script="views/front/js/index.js"></script>
+<script>
+    $(function() {
+        var pages = [{
+            "name": "toggle-group",
+            "href": "#example/toggle-group"
+        }, {
+            "name": "multi-select",
+            "href": "#example/multi-select"
+        },{
+            "name": "single-page toggle-group",
+            "href": "#example/single-page/toggle-group"
+        }, {
+            "name": "single-page multi-select",
+            "href": "#example/single-page/multi-select"
+        },  {
+            "name": "alert",
+            "action": "Message.alert('Light Zen')"
+        }, {
+            "name": "toast",
+            "action": "Message.toast('Light Zen')"
+        }, {
+            "name": "confirm",
+            "action": "Message.confirm('Light Zen')"
+        }];
+        var Service = {
+            init: function() {
+                this.data = pages;
+                this.rend();
+            },
+            rend: function() {
+                var self = this;
+                var data = pages;
+                var parent = $(".page-list");
+                for (var i = 0; i < data.length; i++) {
+                    var item = data[i];
+                    var clone = $(".page-template .list-item").clone();
+                    Store.data(clone, item);
+                    Util.rendValue(clone, item);
+                    self.bind(clone);
+                    parent.append(clone);
+                }
+            },
+            bind: function(clone) {
+                clone.click(function() {
+                    var data = Store.data(clone);
+                    if (data.href) {
+                        window.location.href = data.href;
+                    }
+                    if (data.action) {
+                        eval(data.action);
+                    }
+
+                })
+            }
+        }
+        Zen.ready(Service);
+    })
+</script>
