--- a/src/views/index.html
+++ b/src/views/index.html
@@ -27,13 +27,34 @@
     <div class="page-template hide">
         <li class="list-item inline clearfix">
             <div class="font20 name"></div>
-            <div class="font16 gray href action"></div>
+            <div class="font16 href action"></div>
         </li>
     </div>
 </div>
 <script>
     $(function() {
         var pages = [{
+            "name": "toggle-group",
+            "href": "#example/toggle-group"
+        }, {
+            "name": "multi-select",
+            "href": "#example/multi-select"
+        },{
+            "name": "single-page toggle-group",
+            "href": "#example/single-page/toggle-group"
+        }, {
+            "name": "single-page multi-select",
+            "href": "#example/single-page/multi-select"
+        },  {
+            "name": "alert",
+            "action": "Message.alert('Light Zen')"
+        }, {
+            "name": "toast",
+            "action": "Message.toast('Light Zen')"
+        }, {
+            "name": "confirm",
+            "action": "Message.confirm('Light Zen')"
+        },{
             "name": "toggle-group",
             "href": "#example/toggle-group"
         }, {
