--- a/src/zen-css/zen.css
+++ b/src/zen-css/zen.css
@@ -1,8 +1,12 @@
+#app{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow-y: hidden;
+}
 .zen-page {
-    position: absolute;
-    width: 100%;
+    position: relative;
     height: 100%;
-    overflow-y: scroll;
 }
 
 .zen-module{
