zenjs views style

--- a/src/views/example/index.html
+++ b/src/views/example/index.html
@@ -14,7 +14,9 @@
     .index-page .list-item {
         list-style: none;
         padding: 10px 15px;
-        border-bottom: 1px solid #eee;
+        background: #FFF;
+        margin: 15px;
+        border-radius: 5px;
     }
 
     .index-page .list-item .name {
@@ -27,7 +29,7 @@
     <div class="page-template hide">
         <li class="list-item inline clearfix">
             <div class="font20 name"></div>
-            <div class="font16 href action"></div>
+            <div class="font16 gray href action"></div>
         </li>
     </div>
 </div>
@@ -39,13 +41,13 @@
         }, {
             "name": "multi-select",
             "href": "#example/multi-select"
-        },{
+        }, {
             "name": "single-page toggle-group",
             "href": "#example/single-page/toggle-group"
         }, {
             "name": "single-page multi-select",
             "href": "#example/single-page/multi-select"
-        },  {
+        }, {
             "name": "alert",
             "action": "Message.alert('Light Zen')"
         }, {
