--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,4 +1,6 @@
 <style>
+    .zen-page{
+    }
     .c-navmenu-banner .title {
         font-size: 1.6rem;
         color: #FFF;
@@ -23,6 +25,7 @@
     .link-item {
         height: 100px;
         width: 64px;
+        color: #FFF;
     }
     .link-item i{
         font-size:2.4rem;
