--- a/src/views/example/multi-select/index.css
+++ b/src/views/example/multi-select/index.css
@@ -1,6 +1,3 @@
-.zen-page ul {
-    list-style: none;
-    margin: 15px;
-    padding: 15px;
-    font-size: 16px;
+.zen-page{
+  font-size: 1.6rem;
 }
