--- a/src/views/example/multi-select/index.html
+++ b/src/views/example/multi-select/index.html
@@ -1,11 +1,12 @@
 <div class="zen-page"  >
+    <h2 class="font24 white text-center ">Multi Select</h2>
     <ul>
-        <li>
+        <li class="c-card">
             <span class="label-txt lh40">多选择1：</span>
             <div id="m-type" v-zen="multi-select"></div>
         </li>
         <br>
-        <li>
+        <li class="c-card">
             <span class="label-txt lh40">多选择2：</span>
             <div id="m-status" v-zen="multi-select"></div>
         </li>
