--- a/src/views/example/toggle-group/index.html
+++ b/src/views/example/toggle-group/index.html
@@ -1,11 +1,22 @@
-<style></style>
+<style>
+    .zen-page{
+      font-size: 1.6rem;
+    }
+    .c-card {
+        position: relative;
+        background: #FFF;
+        margin: 1.5rem 1.5rem 0 1.5rem;
+        border-radius: .3rem;
+        padding: 1.5rem;
+    }
+</style>
 <div class="zen-page">
+    <h2 class="font24 white text-center ">Toggle Group</h2>
     <ul>
-        <li>
+        <li class="c-card">
             <div id="m-type" v-zen="toggle-group"></div>
         </li>
-        <br>
-        <li>
+        <li class="c-card">
             <div id="m-status" v-zen="toggle-group"></div>
         </li>
     </ul>
