--- a/src/zen-css/reset.css
+++ b/src/zen-css/reset.css
@@ -183,3 +183,9 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
+
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
