--- a/src/zen-css/zen.css
+++ b/src/zen-css/zen.css
@@ -17,3 +17,11 @@
 .zen-module.show{
   display: block;
 }
+
+.c-card {
+    position: relative;
+    background: #FFF;
+    margin: 1.5rem 1.5rem 0 1.5rem;
+    border-radius: .3rem;
+    padding: 1.5rem;
+}
