--- a/src/views/example/index.html
+++ b/src/views/example/index.html
@@ -24,6 +24,7 @@
     }
 </style>
 <div class="zen-page index-page">
+    <h2 class="font24 white text-center normal">Zenjs Modules</h2>
     <ul class="page-list" id="page-list">
     </ul>
     <div class="page-template hide">
