--- a/src/views/example/multi-select/index.html
+++ b/src/views/example/multi-select/index.html
@@ -1,5 +1,5 @@
 <div class="zen-page"  >
-    <h2 class="font24 white text-center ">Multi Select</h2>
+    <h2 class="font24 white text-center normal">Multi Select</h2>
     <ul>
         <li class="c-card">
             <span class="label-txt lh40">多选择1：</span>
