--- a/src/views/index.html
+++ b/src/views/index.html
@@ -49,17 +49,17 @@
     </div>
     <ul class="link-list">
         <li class="link-item text-center" v-link="#example/index">
-            <div class=""><i class="fa fa-paper-plane fa-fw white"></i></div>
+            <div class=""><i class="fa fa-gift fa-fw white"></i></div>
             <div class="name ">VIEWS</div>
             <div class="white-line"></div>
         </li>
         <li class="link-item text-center" v-link="#front/green">
-            <div class=""><i class="fa fa-paper-plane fa-fw white font32"></i></div>
+            <div class=""><i class="fa fa-tree fa-fw white font32"></i></div>
             <div class="name">MODULES</div>
             <div class="white-line"></div>
         </li>
         <li class="link-item text-center" v-link="#about">
-            <div class=""><i class="fa fa-paper-plane fa-fw white font32"></i></div>
+            <div class=""><i class="fa fa-inbox fa-fw white font32"></i></div>
             <div class="name">ZENJS</div>
             <div class="white-line"></div>
         </li>
