--- a/src/views/example/single-page/multi-select.html
+++ b/src/views/example/single-page/multi-select.html
@@ -1,20 +1,17 @@
 <style>
-    .zen-page ul {
-        list-style: none;
-        margin: 15px;
-        padding: 15px;
-        font-size: 16px;
+    .zen-page {
+        font-size: 1.6rem;
     }
 </style>
-
 <div class="zen-page">
+    <h2 class="font24 white text-center normal">Multi Select</h2>
     <ul>
-        <li>
+        <li class="c-card">
             <span class="label-txt lh40">多选择1：</span>
             <div id="m-type" v-zen="multi-select"></div>
         </li>
         <br>
-        <li>
+        <li class="c-card">
             <span class="label-txt lh40">多选择2：</span>
             <div id="m-status" v-zen="multi-select"></div>
         </li>
