--- a/src/views/example/toggle-group/index.html
+++ b/src/views/example/toggle-group/index.html
@@ -11,7 +11,7 @@
     }
 </style>
 <div class="zen-page">
-    <h2 class="font24 white text-center ">Toggle Group</h2>
+    <h2 class="font24 white text-center normal">Toggle Group</h2>
     <ul>
         <li class="c-card">
             <div id="m-type" v-zen="toggle-group"></div>
