--- a/src/views/example/index.html
+++ b/src/views/example/index.html
@@ -13,10 +13,6 @@
 
     .index-page .list-item {
         list-style: none;
-        padding: 10px 15px;
-        background: #FFF;
-        margin: 15px;
-        border-radius: 5px;
     }
 
     .index-page .list-item .name {
@@ -28,7 +24,7 @@
     <ul class="page-list" id="page-list">
     </ul>
     <div class="page-template hide">
-        <li class="list-item inline clearfix">
+        <li class="list-item inline c-card clearfix">
             <div class="font20 name"></div>
             <div class="font16 gray href action"></div>
         </li>
@@ -37,6 +33,27 @@
 <script>
     $(function() {
         var pages = [{
+            "name": "toggle-group",
+            "href": "#example/toggle-group"
+        }, {
+            "name": "multi-select",
+            "href": "#example/multi-select"
+        }, {
+            "name": "single-page toggle-group",
+            "href": "#example/single-page/toggle-group"
+        }, {
+            "name": "single-page multi-select",
+            "href": "#example/single-page/multi-select"
+        }, {
+            "name": "alert",
+            "action": "Message.alert('Light Zen')"
+        }, {
+            "name": "toast",
+            "action": "Message.toast('Light Zen')"
+        }, {
+            "name": "confirm",
+            "action": "Message.confirm('Light Zen')"
+        },{
             "name": "toggle-group",
             "href": "#example/toggle-group"
         }, {
