--- a/src/views/front/green.html
+++ b/src/views/front/green.html
@@ -1,14 +1,16 @@
 <style>
     .bg-green {
-        background: green;
+        color: green;
         font-size: 20px;
-        position: absolute;
-        width: 100%;
-        height: 100%;
+        width: 80%;
+        height: 100px;
     }
 </style>
-<div class="zen-page bg-green v-center">
-    green
+<div class="zen-page  ">
+    <h2 class="font24 white text-center normal">ZEN PAGE</h2>
+    <div class="c-card bg-green v-center">
+        green
+    </div>
 </div>
 <script>
     console.log("green page");
