--- a/src/views/about/index.html
+++ b/src/views/about/index.html
@@ -59,7 +59,7 @@
     <div class="c-card">
         <h3>其他</h3>
         <p>
-             - 虽然js的框架写法有很多做，但个人建议你按照当前简单的方式来，大道若简是我所崇尚的。
+             - 虽然js的框架写法有很多做，但个人建议你按照当前简单的方式来，大道若简是我所崇尚的。<br>
              - 感谢vuejs，weui，zepto，gulp这些优秀的库。
         </p>
     </div>
