--- a/src/views/example/index.html
+++ b/src/views/example/index.html
@@ -23,6 +23,7 @@
     <h2 class="font24 white text-center normal">Zenjs Modules</h2>
     <ul class="page-list" id="page-list">
     </ul>
+    <div class="lh15">&nbsp;</div>
     <div class="page-template hide">
         <li class="list-item inline c-card clearfix">
             <div class="font20 name"></div>
@@ -46,34 +47,13 @@
             "href": "#example/single-page/multi-select"
         }, {
             "name": "alert",
-            "action": "Message.alert('Light Zen')"
+            "action": "Message.alert('Zenjs')"
         }, {
             "name": "toast",
-            "action": "Message.toast('Light Zen')"
+            "action": "Message.toast(' A light framwork')"
         }, {
             "name": "confirm",
-            "action": "Message.confirm('Light Zen')"
-        },{
-            "name": "toggle-group",
-            "href": "#example/toggle-group"
-        }, {
-            "name": "multi-select",
-            "href": "#example/multi-select"
-        }, {
-            "name": "single-page toggle-group",
-            "href": "#example/single-page/toggle-group"
-        }, {
-            "name": "single-page multi-select",
-            "href": "#example/single-page/multi-select"
-        }, {
-            "name": "alert",
-            "action": "Message.alert('Light Zen')"
-        }, {
-            "name": "toast",
-            "action": "Message.toast('Light Zen')"
-        }, {
-            "name": "confirm",
-            "action": "Message.confirm('Light Zen')"
+            "action": "Message.confirm('Coding Zen!')"
         }];
         var Service = {
             init: function() {
