--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,6 +1,6 @@
 <style>
-    .zen-page{
-    }
+    .zen-page {}
+
     .c-navmenu-banner .title {
         font-size: 1.6rem;
         color: #FFF;
@@ -21,14 +21,17 @@
         width: 64px;
         color: #FFF;
     }
-    .link-item i{
-        font-size:2.4rem;
+
+    .link-item i {
+        font-size: 2.4rem;
     }
-    .link-item .name{
+
+    .link-item .name {
         line-height: 3rem;
         font-size: 1.4rem;
     }
-    .link-item .white-line{
+
+    .link-item .white-line {
         height: .1rem;
         background: #FFF;
     }
@@ -60,13 +63,22 @@
     </ul>
 </div>
 <script type="text/javascript">
-$(function(){
-  $(".c-navmenu-banner .menu").click(function() {
-      $("#app").toggleClass("nav-on");
-  });
-  $(".c-side-nav li").click(function() {
-      $("#app").removeClass("nav-on");
-  });
-})
+    $(function() {
 
+        var Service = {
+            init: function() {
+                this.init_sidenav();
+            },
+            init_sidenav: function() {
+                $(".c-side-nav").show();
+                $(".c-navmenu-banner .menu").click(function() {
+                    $("#app").toggleClass("nav-on");
+                });
+                $(".c-side-nav li").click(function() {
+                    $("#app").removeClass("nav-on");
+                });
+            }
+        }
+        Zen.ready(Service);
+    })
 </script>
