--- a/src/views/index.html
+++ b/src/views/index.html
@@ -39,25 +39,25 @@
 <div class="zen-page v-center">
     <div class="c-navmenu-banner fix-top">
         <div class="text-center clearfix">
-            <span class="logo fl" v-link="#index"><i class="fa fa-paper-plane fa-fw white" ></i></span>
-            <span class="title"></span>
+            <span class="logo fl" v-link="https://github.com/ganlight/zenjs"><i class="fa fa-paper-plane fa-fw white" ></i><span class="white ml10 font16">ZENJS</span></span>
+            <span class="title white"></span>
             <span class="fr menu"><i class="fa fa-bars fa-fw white" ></i></span>
         </div>
     </div>
     <ul class="link-list">
-        <li class="link-item text-center" v-link="#front/green">
-            <div class=""><i class="fa fa-gift fa-fw white"></i></div>
-            <div class="name ">VIEWS</div>
-            <div class="white-line"></div>
-        </li>
         <li class="link-item text-center" v-link="#example/index">
             <div class=""><i class="fa fa-tree fa-fw white font32"></i></div>
             <div class="name">MODULES</div>
             <div class="white-line"></div>
         </li>
+        <li class="link-item text-center" v-link="https://github.com/ganlight/zenjs">
+            <div class=""><i class="fa fa-code fa-fw white"></i></div>
+            <div class="name ">GITHUB</div>
+            <div class="white-line"></div>
+        </li>
         <li class="link-item text-center" v-link="#about">
             <div class=""><i class="fa fa-inbox fa-fw white font32"></i></div>
-            <div class="name">ZENJS</div>
+            <div class="name">ABOUT</div>
             <div class="white-line"></div>
         </li>
     </ul>
