--- a/src/views/focus-time/index.html
+++ b/src/views/focus-time/index.html
@@ -1,7 +1,22 @@
 <style>
+    .remain-time {
+        font-size: 5rem;
+        color: #FFF;
+    }
 </style>
-<div class="zen-page v-center">
-    green
+<div class="zen-page">
+    <h2 class="font24 white text-center normal">FOCUS TIME</h2>
+    <div class="task-list"></div>
+    <div class="task-info text-center">
+        <div class="remain-time">
+
+        </div>
+    </div>
+    <div class="task-opt text-center">
+        <span class="start-btn c-btn">开始</span>
+        <span class="stop-btn c-btn">停止</span>
+        <span class="break-btn c-btn">休息</span>
+    </div>
 </div>
 <script>
     console.log("focus time");
