--- a/src/views/focus-time/index.html
+++ b/src/views/focus-time/index.html
@@ -15,7 +15,7 @@
     <div class="task-opt text-center">
         <span class="start-btn c-btn">开始</span>
         <span class="stop-btn c-btn">停止</span>
-        <span class="break-btn c-btn">休息</span>
+        <span class="rest-btn c-btn">休息</span>
     </div>
 </div>
 <script>
