--- a/src/zen-css/zen.css
+++ b/src/zen-css/zen.css
@@ -8,6 +8,9 @@ body {
     min-height: 100%;
     overflow-y: auto;
     transition: all 0.2s;
+    background: transparent;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
 }
 
 .zen-page {
@@ -40,10 +43,14 @@ body {
 @keyframes slideIn {
     from {
         transform: translate3d(100%, 0, 0);
+        -webkit-transform: translate3d(100%, 0, 0);
+        -moz-transform: translate3d(100%, 0, 0);
         opacity: 0;
     }
     to {
         transform: translate3d(0, 0, 0);
+        -webkit-transform: translate3d(0, 0, 0);
+        -moz-transform: translate3d(0, 0, 0);
         opacity: 1;
     }
 }
@@ -51,18 +58,26 @@ body {
 @keyframes slideOut {
     from {
         transform: translate3d(0, 0, 0);
+        -webkit-transform: translate3d(0, 0, 0);
+        -moz-transform: translate3d(0, 0, 0);
         opacity: 1;
     }
     to {
         transform: translate3d(100%, 0, 0);
+        -webkit-transform: translate3d(100%, 0, 0);
+        -moz-transform: translate3d(100%, 0, 0);
         opacity: 0;
     }
 }
 
 .zen-page.slideIn {
     animation: slideIn .2s forwards;
+    -webkit-animation: slideIn .2s forwards;
+    -moz-animation: slideIn .2s forwards;
 }
 
 .zen-page.slideOut {
     animation: slideOut .2s forwards;
+    -webkit-animation: slideOut .2s forwards;
+    -moz-animation: slideOut .2s forwards;
 }
