--- a/src/zen-css/zen.css
+++ b/src/zen-css/zen.css
@@ -46,33 +46,33 @@ body {
 
 @keyframes slideIn {
     from {
-        transform: translateX(100%);
+        transform: translate3d(100%, 0, 0);
         opacity: 0;
     }
     to {
-        transform: translateX(0);
+        transform: translate3d(0, 0, 0);
         opacity: 1;
     }
 }
 
 @-webkit-keyframes slideIn {
     from {
-        -webkit-transform: translateX(100%);
+        -webkit-transform: translate3d(100%, 0, 0);
         opacity: 0;
     }
     to {
-        -webkit-transform: translateX(0);
+        -webkit-transform: translate3d(0, 0, 0);
         opacity: 1;
     }
 }
 
 @-moz-keyframes slideIn {
     from {
-        -moz-transform: translateX(100%);
+        -moz-transform: translate3d(100%, 0, 0);
         opacity: 0;
     }
     to {
-        -moz-transform: translateX(0);
+        -moz-transform: translate3d(0, 0, 0);
         opacity: 1;
     }
 }
