--- a/src/zen-css/zen.css
+++ b/src/zen-css/zen.css
@@ -17,6 +17,8 @@ body {
     position: relative;
     min-height: 100%;
     transition: all 0.2s;
+    max-width: 1024px;
+    margin: 0 auto;
     /*transform: translate3d(100%, 0, 0);
     -webkit-transform: translate3d(100%, 0, 0);
     -moz-transform: translate3d(100%, 0, 0);*/
