--- a/src/views/blog/index.html
+++ b/src/views/blog/index.html
@@ -1,11 +1,23 @@
 <style>
-  .markdown-area{
-    margin-bottom: 1.5rem;
-  }
+    .markdown-area {
+        position: relative;
+        background: #fff;
+        margin: 1.5rem 1.5rem 0;
+        border-radius: .3rem;
+        padding: 1.5rem;
+        margin-bottom: 1.5rem;
+    }
 </style>
 <div class="zen-page ">
     <h2 class="font24 white text-center normal title"></h2>
-    <div class="markdown-area c-card"></div>
+    <div class="markdown-area"></div>
+    <div class="catalog-area"></div>
+    <div class="page-template hide">
+        <div class="list-item inline c-card clearfix">
+            <div class="font20 title"></div>
+            <div class="font16 gray "><span class="type"></span>/<span class="file"></span></div>
+        </div>
+    </div>
 </div>
 <!-- <script v-script="//cdn.bootcss.com/showdown/1.5.0/showdown.min.js"></script> -->
 
@@ -13,24 +25,73 @@
     $(function() {
         var Articles = [{
             title: "Zenjs install",
-            date: "2016-11-25 14:00",
+            public: "2016-11-25 14:00",
             auther: "ganlight",
             type: "zenjs",
             section: "begin",
             file: "begin-install"
-        },{
+        }, {
             title: "Zenjs install2",
-            date: "2016-11-25 14:00",
+            public: "2016-11-25 14:00",
             auther: "ganlight",
             type: "zenjs",
             section: "begin",
-            file: "begin-install"
+            file: "begin-install2"
         }];
+
+        var Catalog = {
+            articles: [],
+            types: null,
+            sections: null,
+            map: {},
+            init: function(articles) {
+                this.articles = articles || [];
+                this.rend();
+            },
+            rend: function() {
+                var self = this;
+                if (this.articles && this.articles.length > 0) {
+                    var len = this.articles.length;
+                    var data = this.articles;
+                    var parent = $(".catalog-area");
+                    for (var i = 0; i < data.length; i++) {
+                        var item = data[i];
+                        var clone = $(".page-template .list-item").clone();
+                        Store.data(clone, item);
+                        self.map[item.type + "/" + item.file] = item;
+                        Util.rendValue(clone, item);
+                        self.bind(clone);
+                        parent.append(clone);
+                    }
+                }
+            },
+            get: function(type, file) {
+                var item = this.map[type + "/" + file] || "";
+                return item;
+            },
+            bind: function(clone) {
+                var self = this;
+                clone.click(function() {
+                    var data = Store.data(clone);
+                    if (data && data.file) {
+                        window.location.href = "#" + Util.getHash() + "?type=" + data.type + "&file=" + data.file;
+                    }
+                })
+            }
+        }
 
         var Service = {
             init: function() {
                 MarkDown.init();
-                MarkDown.load(Articles[0]);
+                Catalog.init(Articles);
+                var type = Util.getPar("type");
+                var file = Util.getPar("file");
+                var article = Catalog.get(type, file);
+                if (article) {
+                    MarkDown.load(article);
+                } else {
+
+                }
             }
         }
         Zen.ready(Service);
