--- a/src/zen-module/side-nav/index.css
+++ b/src/zen-module/side-nav/index.css
@@ -10,9 +10,6 @@
     margin: 0;
     transition: all 0.2s;
     z-index: -1;
-    /*transform: translateX(15rem);
-    -webkit-transform: translateX(15rem);
-    -moz-transform: translateX(15rem);*/
 }
 
 .c-side-nav.nav-right {
@@ -27,9 +24,6 @@
     padding-top: 3rem;
     transition: all 0.2s;
     z-index: -1;
-    /*transform: translateX(15rem);
-    -webkit-transform: translateX(15rem);
-    -moz-transform: translateX(15rem);*/
 }
 
 .c-side-nav .avatar {
@@ -66,7 +60,6 @@
     transform: translateX(-15rem);
     -webkit-transform: translateX(-15rem);
     -moz-transform: translateX(-15rem);
-    /*overflow-y: hidden;*/
 }
 
 .nav-right .c-side-nav {
@@ -81,13 +74,40 @@
     transform: translateY(15rem);
     -webkit-transform: translateY(15rem);
     -moz-transform: translateY(15rem);
-    /*overflow-y: hidden;*/
 }
 
 .nav-top .c-side-nav {
     width: 15rem;
     opacity: 1;
     transform: translateY(0);
+    -webkit-transform: translateY(0);
+    -moz-transform: translateY(0);
+}
+
+.c-side-nav.nav-left {
+    background: rgb(63, 85, 79);
+    width: 80%;
+    position: absolute;
+    opacity: 1;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    margin: 0;
+    padding-top: 3rem;
+    transition: all 0.2s;
+    z-index: -1;
+}
+
+#app.nav-left {
+    transform: translateX(80%);
+    -webkit-transform: translateX(80%);
+    -moz-transform: translateX(80%);
+}
+
+.nav-left .c-side-nav {
+    width: 15rem;
+    opacity: 1;
+    transform: translateX(0);
     -webkit-transform: translateY(0);
     -moz-transform: translateY(0);
 }
