--- a/src/views/blog/article/index.html
+++ b/src/views/blog/article/index.html
@@ -3,7 +3,8 @@
         line-height: 5rem;
     }
 
-    .banner-area .back-btn {
+    .banner-area .pre-btn,
+    .banner-area .next-btn {
         background: currentColor;
     }
 
@@ -23,9 +24,9 @@
 </style>
 <div class="zen-page ">
     <div class="banner-area inline clearfix fix-bottom">
-        <div class="back-btn span3"><i class="fa fa-arrow-left fa-fw white"></i><span class="white ml10 font16">上一篇</span></div>
+        <div class="pre-btn span3"><i class="fa fa-arrow-left fa-fw white"></i><span class="white ml10 font16">上一篇</span></div>
         <div class="catalog-type span6 white font16" v-link="#blog/catalog">目录</div>
-        <div class="back-btn span3"><span class="white mr10 font16">下一篇</span><i class="fa fa-arrow-right fa-fw white"></i></div>
+        <div class="next-btn span3"><span class="white mr10 font16">下一篇</span><i class="fa fa-arrow-right fa-fw white"></i></div>
     </div>
     <h2 class="font24 white text-center normal title"></h2>
     <div class="markdown-area"></div>
@@ -42,63 +43,37 @@
 
 <script type="text/javascript">
     $(function() {
-        var MarkDown = {
-            converter: null,
-            init: function() {
-                if (showdown && showdown.Converter) {
-                    this.converter = new showdown.Converter();
-                    var article = {};
-                    article.type = Util.getPar("type");
-                    article.file = Util.getPar("file");
-                    if (article.type && article.file) {
-                        MarkDown.load(article);
-                    }
-                } else {
-                    $(".title").html("暂不支持markdown");
-                }
-            },
-            rend: function(article, data) {
-                if (this.converter && data) {
-                    var html = this.converter.makeHtml(data);
-                    $(".title").html(article.title);
-                    $(".markdown-area").html(html).show();
-                }
-            },
-            load: function(article) {
-                var self = this;
-                // var url = "views.blog__" + article.type + "__" + article.file + "_md";
-                var url = "views"+ '["blog/markdown/' + article.type + "/" + article.file  + '.md"]';
-                var data = Zen.parse(eval(url));
-                if (data) {
-                    data = data.replace(/__block_head__/g, '/*')
-                    self.rend(article, data);
-                }
-            },
-            load_file: function(article) {
-                var self = this;
-                var url = "blog/" + article.type + "/" + article.file + ".md";
-                $.ajax({
-                    url: url,
-                    type: 'get',
-                    async: false,
-                    dataType: 'html',
-                    success: function(data) {
-                        $(".catalog-area").hide();
-                        $(".markdown-area").show();
-                        self.rend(article, data);
-                    },
-                    error: function(e) {
-                        $(".markdown-area").hide();
-                        $(".catalog-area").show();
-                        Message.toast("当前文章" + article.file + "不存在，请返回其他文章");
-                    }
-                });
-            }
-        }
-
         var Service = {
+            id: 0,
             init: function() {
                 MarkDown.init();
+                var id = this.id = parseInt(Util.getPar("id")) || 0;
+                if (articles && articles[id]) {
+                    MarkDown.load(articles[id]);
+                }
+                this.bind();
+            },
+            bind: function() {
+                $(".zen-page .pre-btn").click(function() {
+                    if (Service.id > 0) {
+                        var id = Service.id - 1;
+                        if (articles && articles[id]) {
+                            window.location.href = "#blog/article" + "?id=" + id;
+                        }
+                    } else {
+                        Message.toast("没有上一篇了.");
+                    }
+                })
+                $(".zen-page .next-btn").click(function() {
+                    if (Service.id < articles.length - 1) {
+                        var id = Service.id + 1;
+                        if (articles && articles[id]) {
+                            window.location.href = "#blog/article" + "?id=" + id;
+                        }
+                    } else {
+                        Message.toast("没有下一篇了.");
+                    }
+                })
             }
         }
         Zen.ready(Service);
