--- a/src/zen-css/zen.css
+++ b/src/zen-css/zen.css
@@ -6,6 +6,8 @@ body {
     position: absolute;
     width: 100%;
     min-height: 100%;
+    top:0;
+    left:0;
     overflow-y: auto;
     transition: all 0.2s;
     background: transparent;
@@ -15,7 +17,7 @@ body {
 
 .zen-page {
     position: relative;
-    min-height: 100%;
+    /*min-height: 100%;*/
     transition: all 0.2s;
     max-width: 1024px;
     margin: 0 auto;
