--- a/src/zen-css/common.css
+++ b/src/zen-css/common.css
@@ -1,43 +1,11 @@
 body {
     overflow-x: hidden;
+    -webkit-overflow-scrolling: touch;
 }
 
-.zen-page a {
+body a {
     outline: none;
     blr: expression(this.onFocus=this.blur());
-}
-
-.main-container {
-    position: absolute;
-    transition: all 0.2s;
-    background: transparent;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    overflow-x: hidden;
-    overflow-y: hidden;
-    z-index: 20;
-}
-
-.ext-container {
-    position: absolute;
-    top: 0;
-    right: 0;
-    height: 100%;
-    width: 100%;
-    overflow-y: hidden;
-}
-
-.section {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-    background: #eeeef1;
-    z-index: 20;
-    overflow-x: hidden;
 }
 
 .rotate45 {
