--- a/src/zen-css/zen.css
+++ b/src/zen-css/zen.css
@@ -1,31 +1,18 @@
-body {
-    -webkit-overflow-scrolling: touch;
-}
-
 #app {
     position: absolute;
     width: 100%;
-    min-height: 100%;
+    height: 100%;
     top:0;
     left:0;
     overflow-y: auto;
     transition: all 0.2s;
-    background: transparent;
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
 }
 
 .zen-page {
     position: relative;
-    /*min-height: 100%;*/
     transition: all 0.2s;
     max-width: 1024px;
     margin: 0 auto;
-    /*transform: translate3d(100%, 0, 0);
-    -webkit-transform: translate3d(100%, 0, 0);
-    -moz-transform: translate3d(100%, 0, 0);*/
-    /*-webkit-overflow-scrolling: touch;*/
-    /*overflow-y: scroll;*/
 }
 
 .zen-module {
