--- a/src/zen-css/zen.css
+++ b/src/zen-css/zen.css
@@ -1,4 +1,4 @@
-#app {
+.zen-container {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -34,28 +34,6 @@
     }
 }
 
-@-webkit-keyframes slideIn {
-    from {
-        -webkit-transform: translate3d(100%, 0, 0);
-        opacity: 0;
-    }
-    to {
-        -webkit-transform: translate3d(0, 0, 0);
-        opacity: 1;
-    }
-}
-
-@-moz-keyframes slideIn {
-    from {
-        -moz-transform: translate3d(100%, 0, 0);
-        opacity: 0;
-    }
-    to {
-        -moz-transform: translate3d(0, 0, 0);
-        opacity: 1;
-    }
-}
-
 @keyframes slideOut {
     from {
         transform: translate3d(0, 0, 0);
@@ -69,15 +47,8 @@
 
 .zen-page.slideIn {
     animation: slideIn .2s forwards;
-    -webkit-animation: slideIn .2s forwards;
-    -moz-animation: slideIn .2s forwards;
-    /*transform: translate3d(0, 0, 0);
-    -webkit-transform: translate3d(0, 0, 0);
-    -moz-transform: translate3d(0, 0, 0);*/
 }
 
 .zen-page.slideOut {
     animation: slideOut .2s forwards;
-    -webkit-animation: slideOut .2s forwards;
-    -moz-animation: slideOut .2s forwards;
 }
