--- a/src/zen-css/zen.css
+++ b/src/zen-css/zen.css
@@ -2,10 +2,15 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    top:0;
-    left:0;
+    top: 0;
+    left: 0;
     overflow-y: auto;
-    transition: all 0.2s;
+}
+
+.zen-stack {
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
 
 .zen-page {
@@ -21,34 +26,4 @@
 
 .zen-module.show {
     display: block;
-}
-
-@keyframes slideIn {
-    from {
-        transform: translate3d(100%, 0, 0);
-        opacity: 0;
-    }
-    to {
-        transform: translate3d(0, 0, 0);
-        opacity: 1;
-    }
-}
-
-@keyframes slideOut {
-    from {
-        transform: translate3d(0, 0, 0);
-        opacity: 1;
-    }
-    to {
-        transform: translate3d(100%, 0, 0);
-        opacity: 0;
-    }
-}
-
-.zen-page.slideIn {
-    animation: slideIn .2s forwards;
-}
-
-.zen-page.slideOut {
-    animation: slideOut .2s forwards;
 }
