--- a/src/views/blog/article/index.css
+++ b/src/views/blog/article/index.css
@@ -36,3 +36,27 @@ sup {
 * {
 	 -webkit-print-color-adjust: exact;
 }
+
+.banner-area {
+    line-height: 5rem;
+    bottom: -0.1rem;
+}
+
+.banner-area .pre-btn,
+.banner-area .next-btn {
+    background: currentColor;
+}
+
+.banner-area .catalog-type {
+    background: cadetblue;
+}
+
+.markdown-area {
+    position: relative;
+    background: #fff;
+    margin: 1.5rem 1.5rem 0;
+    border-radius: .3rem;
+    padding: 1.5rem;
+    margin-bottom: 6rem;
+    display: none;
+}
