--- a/src/views/blog/catalog/index.html
+++ b/src/views/blog/catalog/index.html
@@ -26,9 +26,12 @@
         padding-bottom: 5px;
     }
 </style>
-<div class="zen-page ">
+<div class="zen-page">
     <div class="banner-area inline clearfix fix-top">
-        <div class="back-btn span4" v-link="#index"><i class="fa fa-paper-plane fa-fw white"></i><span class="white ml10 font16">ZENJS</span></div>
+        <div class="back-btn span4" v-link="#index">
+            <i class="fa fa-paper-plane fa-fw white"></i>
+            <span class="white ml10 font16">ZENJS</span>
+        </div>
         <div class="catalog-type span8 white font16 ">目录</div>
     </div>
     <ul class="catalog-area">
@@ -36,13 +39,62 @@
     <div class="page-template hide">
         <div class="list-item">
             <div class="font20 title"></div>
-            <div class="font16 gray "><span class="type"></span>/<span class="file"></span></div>
+            <div class="font16 gray ">
+                <span class="type"></span>/<span class="file"></span>
+            </div>
         </div>
     </div>
 </div>
 <script v-script="views/blog/config.js"></script>
 <script type="text/javascript">
     $(function() {
+        var Catalog = {
+            articles: [],
+            types: null,
+            sections: null,
+            map: {},
+            init: function() {
+                if (articles) {
+                    this.articles = articles;
+                    this.rend();
+                }
+            },
+            rend: function() {
+                var self = this;
+                if (this.articles && this.articles.length > 0) {
+                    var len = this.articles.length;
+                    var data = this.articles;
+                    var parent = $(".catalog-area");
+                    for (var i = 0; i < data.length; i++) {
+                        var item = data[i];
+                        item.id = i;
+                        var clone = $(".page-template .list-item").clone();
+                        Store.data(clone, item);
+                        self.map[item.type + "/" + item.file] = item;
+                        Util.rendValue(clone, item);
+                        self.bind(clone);
+                        parent.append(clone);
+                    }
+                }
+            },
+            get: function(type, file) {
+                var item = this.map[type + "/" + file] || "";
+                return item;
+            },
+            getIndex: function(type, file) {
+                var item = this.map[type + "/" + file] || "";
+                return item;
+            },
+            bind: function(clone) {
+                var self = this;
+                clone.click(function() {
+                    var data = Store.data(clone);
+                    if (data && data.id > -1) {
+                        window.location.href = "#blog/article" + "?id=" + data.id;
+                    }
+                })
+            }
+        }
         var Service = {
             init: function() {
                 Catalog.init();
